--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,14 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
     <button class='make_pdf'>Click me</button>
+
+    <a href="screen_one/index.html">Test</a>
   </body>
 
   <script>
     // You can also require other files to run in this process
     require('./renderer.js')
-
+    
 
   </script>
 </html>
