Added screen 2 base form, converted main page into lame portal

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
     <button class='make_pdf'>Click me</button>
+
+    <h2>Screens</h2>
+    <ul>
+      <li><a href="screen_0/index.html">Screen 0</a></li>
+      <li><a href="screen_1/index.html">Screen 1</a></li>
+      <li><a href="screen_2/index.html">Screen 2</a></li>
+    </ul>
   </body>
 
   <script>
