added save functionality

--- a/src/screen_one/index.html
+++ b/src/screen_one/index.html
@@ -472,6 +472,10 @@
     </div>
 </body>
  <script>
+
+	 var fs = require('fs'); // Load the File System to execute our common tasks (CRUD)
+
+
   $.fn.serializeObject = function()
 {
     var o = {};
@@ -491,7 +495,19 @@
  
 $(function() {
     $('form').submit(function() {
-        console.log(JSON.stringify($('form').serializeObject()));
+        //console.log(JSON.stringify($('form').serializeObject()));
+		//TODO validation
+		var fileName = "screen_one"; //TODO folder 
+		var content = JSON.stringify($('form').serializeObject());
+		 fs.writeFile(fileName, content, function (err) {
+			 
+           if(err){
+               alert("An error ocurred creating the file "+ err.message)
+           }
+                        
+           alert("The file has been succesfully saved");
+       });
+
         return false;
     });
 });
