update cover screen

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,26 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Referral System</title>
+
+    	<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+ <script src="../bower_components/jquery-1.9.1/index.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+  <body style='background-image: url("assets/pregnancy.jpg");background-repeat:no-repeat;background-size:cover;'>
+   <div style="container">
+     <div class="row">
+        <h1 style="color:white;font-size:68px;margin-top:220px;" class="col-sm-6 col-sm-offset-3">Referral System</h1>
+     </div>
+
+      <div class="row">
+         <button style="background-color:white;border-color:white;color:black;font-size:30px;margin-top:220px;"  class=" col-sm-2 col-sm-offset-5 btn btn-success">Start</button>
+       </div>
+
+
+
+  
+    
     <button class='make_pdf'>Click me</button>
     <h2>Screens</h2>
     <ul>
@@ -17,6 +29,16 @@
       <li><a href="screen_one/index.html">Screen 1</a></li>
       <li><a href="screen_2/index.html">Screen 2</a></li>
     </ul>
+
+
+    <!-- All of the Node.js APIs are available in this renderer process. -->
+    We are using node <script>document.write(process.versions.node)</script>,
+    Chromium <script>document.write(process.versions.chrome)</script>,
+    and Electron <script>document.write(process.versions.electron)</script>.
+
+   </div>
+   
+   
   </body>
 
   <script>
