--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <button class='make_pdf'>Click me</button>
     <h2>Screens</h2>
     <ul>
-      <li><a href="screen_0/index.html">Screen 0</a></li>
+      <li><a href="templates/screen0.html">Screen 0</a></li>
       <li><a href="screen_one/index.html">Screen 1</a></li>
       <li><a href="screen_2/index.html">Screen 2</a></li>
     </ul>
@@ -44,7 +44,7 @@
   <script>
     // You can also require other files to run in this process
     require('./renderer.js')
-    
+
 
   </script>
 </html>
