ui tidy and hook workflow

--- a/src/screen_one/index.html
+++ b/src/screen_one/index.html
@@ -594,7 +594,7 @@ function validation(){
 		}
 		console.log('save');
 		save();
-		
+		window.location = '../screen_two/index.html';
         return false;
     });
 
