--- a/src/index.html
+++ b/src/index.html
@@ -11,33 +11,25 @@
   <body style='background-image: url("assets/pregnancy.jpg");background-repeat:no-repeat;background-size:cover;'>
    <div style="container">
      <div class="row">
-        <h1 style="color:white;font-size:68px;margin-top:220px;" class="col-sm-6 col-sm-offset-3">Referral System</h1>
+        <h1 style="color:white;font-size:68px;margin-top:220px;" class="text-center">Referral System</h1>
      </div>
 
       <div class="row">
-         <button style="background-color:white;border-color:white;color:black;font-size:30px;margin-top:220px;"  class=" col-sm-2 col-sm-offset-5 btn btn-success">Start</button>
+      
+         <a  href="screen_one/index.html" style="background-color:white;border-color:white;color:black;font-size:30px;margin-top:220px;"  class="text-center col-sm-2 col-sm-offset-5 btn btn-success"/>Start</a>
        </div>
 
-
-
-  
-    
-    <button class='make_pdf'>Click me</button>
-    <h2>Screens</h2>
-    <ul>
-      <li><a href="screen_0/index.html">Screen 0</a></li>
-      <li><a href="screen_one/index.html">Screen 1</a></li>
-      <li><a href="screen_2/index.html">Screen 2</a></li>
-    </ul>
-
-
+<div class="row">
+  <p class="col-sm-6 col-sm-offset-3 pull-right"  style="font-size:9x;color:white;margin-top:100px;">
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using node <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+  </p>
 
    </div>
-   
+
+ </div>   
    
   </body>
 
