--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <ul>
       <li><a href="templates/screen0.html">Screen 0</a></li>
       <li><a href="screen_one/index.html">Screen 1</a></li>
-      <li><a href="screen_2/index.html">Screen 2</a></li>
+      <li><a href="screen_two/index.html">Screen 2</a></li>
     </ul>
 
 
