Added screen three and change url

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
       <div class="row">
       
-         <a  href="screen_one/index.html" style="background-color:white;border-color:white;color:black;font-size:30px;margin-top:220px;"  class="text-center col-sm-2 col-sm-offset-5 btn btn-success"/>Start</a>
+         <a  href="screen_three/index.html" style="background-color:white;border-color:white;color:black;font-size:30px;margin-top:220px;"  class="text-center col-sm-2 col-sm-offset-5 btn btn-success"/>Start</a>
        </div>
 
 <div class="row">
