Starting on screen 4, cleaning up screen 2, updating main page navigation

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
       <li><a href="templates/screen0.html">Screen 0</a></li>
       <li><a href="screen_one/index.html">Screen 1</a></li>
       <li><a href="screen_two/index.html">Screen 2</a></li>
+      <li><a href="screen_three/index.html">Screen 3</a></li>
+      <li><a href="screen_four/index.html">Screen 4</a></li>
     </ul>
 
 
